# ntcpycon

./: .gitignore  .gitmodules  .pre-commit-config.yaml  INSTALL.md  README.md  example.yml  pyproject.toml
ntcpycon/: __main__.py  abstract.py  binaryframe.py  config.py  connect.py  edlink.py  file_handler.py  gymmem.py  nestrisocr.py  pcap_replay.py  tcp_server.py  ws_payload_reader.py  ws_sender.py
tests/: test_ntcpycon.py
