[tool.poetry]
name = "ntcpycon"
version = "0.1.0"
description = "Connects alex-ong/NESTrisOCR to timotheeg/nestrischamps"
authors = ["Richard"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^10.3"
scapy = "^2.4.5"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
